--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
 
@@ -113,16 +114,12 @@
                 <div class="mt-8 mb-4 w-full bg-white/5 border border-dashed border-white/20 rounded-3xl p-6 flex flex-col items-center group cursor-help"
                     title="Escanee este código para guardar mi contacto instantáneamente">
                     <div
-                        class="w-32 h-32 bg-white rounded-2xl flex items-center justify-center p-2 mb-3 shadow-lg relative overflow-hidden qr-placeholder">
-                        <!-- ESPACIO PARA TU CÓDIGO QR -->
+                        class="w-72 h-72 bg-white rounded-[40px] flex items-center justify-center p-2 mb-4 shadow-2xl relative group overflow-hidden border-8 border-white/5">
+                        <!-- CÓDIGO QR REAL SISTEMAS 4A - TAMAÑO MAXIMIZADO PARA ESCANEO -->
+                        <img src="https://img.webme.com/pic/a/angelsoluciones/8XwL5d.png" alt="QR Sistemas 4A"
+                            class="w-full h-full object-contain transition-transform duration-500 group-hover:scale-105">
                         <div
-                            class="text-s4a-navy opacity-10 font-bold text-[8px] flex flex-wrap justify-center content-center h-full">
-                            SISTEMAS 4A SISTEMAS 4A SISTEMAS 4A SISTEMAS 4A</div>
-                        <i class="fas fa-qrcode text-4xl text-slate-800 absolute opacity-80"></i>
-                        <div
-                            class="absolute inset-0 flex items-center justify-center bg-s4a-navy/80 opacity-0 group-hover:opacity-100 transition-opacity">
-                            <span class="text-[10px] text-white font-bold uppercase tracking-widest">Coloca aquí tu
-                                QR</span>
+                            class="absolute inset-0 bg-s4a-blue/5 opacity-0 group-hover:opacity-100 transition-opacity pointer-events-none">
                         </div>
                     </div>
                     <span class="text-[10px] font-black text-s4a-blue tracking-widest uppercase"><i
